force-app/main/default/objects/SR_Holiday_Info__c/SR_Holiday_Info__c.object-meta.xml
<CustomObject>
    <label>SR Holiday Info</label>
    <nameField>
        <displayFormat>H-{000000}</displayFormat>
        <label>Holiday ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>