force-app/main/default/objects/SR_Holiday_Info__c/fields/Holiday_Description__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Description__c</fullName>
    <label>Holiday Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>