force-app/main/default/objects/SR_Holiday_Info__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <length>80</length>
    <type>Text</type>
</CustomField>